[tool.poetry]
name = "youTube_downloader"
version = "0.1.0"
description = ""
authors = ["caevh <harrycave1234@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^11.0.2"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
