[tool.poetry]
name = "youTube_downloader"
version = "0.1.0"
description = ""
authors = ["caevh <harrycave1234@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg-python = "^0.2.0"
pytube = {git = "https://github.com/caevh/pytube.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
